--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -132,7 +132,7 @@
 <!--fin notre équipe-->
 
 <!-- Qu'est ce qu'on propose-->
-<section class="activities py-5 mt-4 mb-5">
+<section class="activities py-5 mt-4">
     <div class="container">
         <div class="text-white text-center mb-5">
             <h2>Qu'est ce qu'on propose</h2>
