--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -7,7 +7,7 @@
             Découvrez la beauté des plantes et embellissez votre espace avec PlantBuddy!
         </p>
         <button class="button" (click)="onAboutUs()">
-            <span>A porpos</span>
+            <span>À propos</span>
         </button>
     </div>
 </div>
