--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -42,7 +42,7 @@
         <!------------ le lien pour aller à la page à propos --------------- -->
         <li class="nav-item">
           <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs" routerLinkActive="active">
-            A propos
+            À propos
           </a>
         </li>
 
