--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -17,7 +17,7 @@
                     <span class="text1">{{com.message}}</span>
                     <div class="d-flex justify-content-between py-1 pt-2">
                         <div>
-                            <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">{{com.nom}}</span>
+                            <img src="icone.png" width="28"><span class="text2">{{com.nom}}</span>
                         </div>
                         <div>
                             <span class="text3">{{com.nbLikes}}</span>
