--- a/src/app/compnents/plant-information/plant-information.component.html
+++ b/src/app/compnents/plant-information/plant-information.component.html
@@ -4,13 +4,13 @@
         <p><strong>Personnalité :</strong> {{plant.personality}}</p>
         <p><strong>Description :</strong> {{plant.description}}</p>
         <p><strong>Maintenance :</strong> {{plant.entretien}}</p>
-        <p><strong>Fun Filter :</strong> {{plant.fun_filter}}</p>
+        <p><strong>Filtre amusant :</strong> {{plant.fun_filter}}</p>
     </div>
 
     <div class="plant-details">
         <h3>Détails</h3>
         <p><strong>Prix :</strong> {{plant.price}} $</p>
-        <p><strong>En Stock :</strong> {{plant.stock}} pièces</p>
+        <!-- <p><strong>En Stock :</strong> {{plant.stock}} pièces</p> -->
         <p><strong>Date d'ajout :</strong> {{plant.date_ajout}}</p>
         <p><strong>Durée de vie :</strong> {{plant.dureeVie}}</p>
     </div>
