--- a/src/app/compnents/liste-commandes/liste-commandes.component.html
+++ b/src/app/compnents/liste-commandes/liste-commandes.component.html
@@ -8,8 +8,8 @@
         <table class="table table-striped table-hover ">
             <thead class="table-dark">
                 <tr>
-                    <th scope="col">Nom et Prénom</th>
-                    <th scope="col">ID Commande</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Prénom</th>
                     <th scope="col">Montant</th>
                     <th scope="col">Téléphone</th>
                     <th scope="col">Adresse</th>
