--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -8,7 +8,7 @@
   
         <div class="d-flex align-items-center login-container">
           <a class="navbar-brand login-link" style="color: #1C593A;" (click)="onDisconnect()">Se Déonnecter
-          <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
+          <i class="bi bi-person-x" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
         </div>
       </div>
     </div>
