--- a/src/app/compnents/plant-item/plant-item.component.css
+++ b/src/app/compnents/plant-item/plant-item.component.css
@@ -83,10 +83,36 @@ button{
 .image:hover {
     filter: brightness(1.1) contrast(1.05);
 }
+.list-group-item{
+    font-size: 17px; 
+    background-color: #bddac2; 
+}
+
 .card{
     transition: all 0.3s ease;
 }
 .card:hover{
     box-shadow: 0 4px 8px 0 #1C593A;
     transform: scale(1.01);
+}
+
+#addToCart{
+    background-color: #1C593A;
+    color: #fff;
+    border: 1px solid #1C593A;
+}
+#addToCart:hover{
+    background-color: #79BA91;
+    color: #1C593A;
+    border: 1px solid #1C593A;
+}
+#viewPlant{
+    background-color: #529F76;
+    color: #fff;
+    border: 1px solid #529F76;
+}
+#viewPlant:hover{
+    background-color: #79BA91;
+    color: #1C593A;
+    border: 1px solid #1C593A;
 }
