--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -1,46 +1,59 @@
 <div class="plant-item">
     <div class="card" style="width: 18rem;">
         <div class="first">
-
+            <!-- Affichage du stock de la plante -->
             <div class="d-flex justify-content-between align-items-center">
-
-                <span class="discount" [ngClass]="{'c1': plant.in_stock, 'c2': !plant.in_stock}">{{plant.in_stock ? 'En stock' : 'Rupture de stock'}}</span>
+                <span class="discount" 
+                        [ngClass]="{'c1': plant.in_stock, 'c2': !plant.in_stock}">{{plant.in_stock ? 'En stock' : 'Rupture de stock'}}</span>
+                <!-- Affichage du bouton pour ajouter à la liste des souhaits -->
                 @if(inWishlist(plant)){
-                <button class="wishlist inWishlist" title="Add to wishlist" (click)="addToWishlist(plant)"
-                    (click)="removeFromWishlist(plant)"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
+                    <button class="wishlist inWishlist" 
+                            title="Ajouter à la liste des souhaits" 
+                            (click)="addToWishlist(plant)"
+                            (click)="removeFromWishlist(plant)"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
                 }
                 @else{
-                <button class="wishlist" title="Add to wishlist" (click)="addToWishlist(plant)"><i class="bi bi-heart"
-                        style="font-size: 20px;"></i></button>
+                    <button class="wishlist" 
+                            title="Ajouter à la liste des souhaits" 
+                            (click)="addToWishlist(plant)"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
                 }
             </div>
         </div>
-
-        <img [src]="plant.images" width="100px" height="200px" class="card-img-top image" alt="...">
+        <!-- Image de la plante -->
+        <img [src]="plant.images" width="100px" height="200px" class="card-img-top image" alt="image de la plante">
+        <!-- Corps de la plante -->
         <div class="card-body" style="background-color: #bddac2; border: none;">
-
+            <!-- Titre de la plante -->
             <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
+            <!-- Prix de la plante -->
             <div class="d-flex flex-column mb-2 align-items-end">
                 <span class="new-price">{{plant.price | number:'1.2-2' | currency:'USD'}}</span>
                 <small class="old-price">{{plant.price + 2 | number:'1.2-2' | currency:'USD'}}</small>
             </div>
-            <p class="card-text" style=" font-size: 17px;"><span class="title">Description : </span>
-                {{plant.description}}.</p>
+            <!-- Description de la plante -->
+            <p class="card-text" style=" font-size: 17px;">
+                <span class="title">Description : </span>{{plant.description}}
+            </p>
         </div>
+        <!-- Liste des filtres de la plante -->
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"
-                style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span
-                    class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
+            <li class="list-group-item" style="border-bottom: 1px solid #1C593A;">
+                <span class="title">Filtre amusant : </span> {{plant.fun_filter}}
+            </li>
         </ul>
+        <!-- Boutons pour ajouter au panier et voir la plante -->
         <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-            <button class="btn" style="background-color: #1C593A; color: #fff;" (click)="addToCart(plant)"
-                title="Add to cart">Ajouter au panier</button>
-            <a [routerLink]="['/plant', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;"
-                    title="View plant">Voir plus</button></a>
+            <button class="btn" 
+                    id="addToCart" 
+                    (click)="addToCart(plant)"
+                    title="Ajouter au panier">Ajouter au panier</button>
+            <a [routerLink]="['/plant', plant.id]">
+                <button class="btn" id="viewPlant" title="Voir plus">Voir plus</button>
+            </a>
         </div>
     </div>
 
-    <!-- Modal Bootstrap -->
+    <!-- Modal Bootstrap pour le stock indisponible -->
     <div class="modal fade" id="stockModal" tabindex="-1" aria-labelledby="stockModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
