--- a/src/app/compnents/list-plants-admin/list-plants-admin.component.html
+++ b/src/app/compnents/list-plants-admin/list-plants-admin.component.html
@@ -6,9 +6,9 @@
             <!-- Fun Filter Selection -->
             <div class="col-md-3" style="width: 450px;">
                 <div class="input-group mb-3">
-                    <label class="input-group-text" for="funFilterSelect">Filtre Amusant</label>
+                    <label class="input-group-text" for="funFilterSelect">Type</label>
                     <select class="form-select" id="funFilterSelect" (change)="onFilter($event)">
-                        <option selected value="">Choisissez un filtre amusant...</option>
+                        <option selected value="">Choisissez un type...</option>
                         <option value="">Toutes</option>
                         <option value="Facile à vivre">Facile à vivre</option>
                         <option value="Bavarde">Bavarde</option>
