--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -6,7 +6,7 @@
         <p><strong>Personnalité :</strong> {{plant.personality}}</p>
         <p><strong>Description :</strong> {{plant.description}}</p>
         <p><strong>Maintenance :</strong> {{plant.entretien}}</p>
-        <p><strong>Fun Filter :</strong> {{plant.fun_filter}}</p>
+        <p><strong>Type :</strong> {{plant.fun_filter}}</p>
     </div>
 
     <div class="plant-details">
