--- a/src/app/compnents/profil-admin/profil-admin.component.css
+++ b/src/app/compnents/profil-admin/profil-admin.component.css
@@ -32,7 +32,12 @@ button {
     cursor: pointer;
     border: 1px solid #1C593A;
 }
-
+button:disabled {
+    background-color: #ccc;  
+    cursor: not-allowed;
+    opacity: 0.6;   
+    border-color:#ccc ;         
+}
 button:hover {
     background-color: #79BA91; 
     color: #1C593A; 
