--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <header class="text-white text-center py-5">
     <div class="container about-us-content">
-        <h1 class="display-4">A propos</h1>
+        <h1 class="display-4">À propos de nous</h1>
         <p class="lead">Chez PlantBuddy, nous sommes passionnés par les plantes et la nature. Notre objectif est
             d'offrir une expérience d'achat en ligne unique, où les utilisateurs peuvent trouver une variété de plantes
             soigneusement sélectionnées, accompagnées de conseils pour leur entretien. Rejoignez notre communauté et
