--- a/src/app/compnents/profil-admin/profil-admin.component.html
+++ b/src/app/compnents/profil-admin/profil-admin.component.html
@@ -10,11 +10,23 @@
 
         <form id="change-password-form" [formGroup]="profilForm" (ngSubmit)="onConfirmer()" [hidden]="hideForm">
             <h2>Modifier le mot de passe</h2>
+            <!-- Mot de passe actuel -->
             <label for="current-password">Mot de passe actuel :</label>
             <input type="password" id="current-password" formControlName="mdpActuel">
             @if(mdp?.value !== admin.pwd && mdp?.dirty){
                 <p class="pAlert">Mot de passe incorrect</p>
             }
+            @if(mdp?.invalid && mdp?.touched){
+            <p class="pAlert">Veuillez remplir ce champ</p>
+            }
+            @if(mdp?.errors?.['minlength'] && mdp?.touched){
+            <p class="pAlert">Minimum 3 caractères</p>
+            }
+            @if(mdp?.errors?.['maxlength'] && mdp?.touched){
+            <p class="pAlert">Maximum 20 caractères</p>
+            }
+
+            <!-- Nouveau mot de passe -->
             <label for="new-password">Nouveau mot de passe :</label>
             <input type="password" id="new-password" formControlName="mdpNew">
             @if(newPwd?.value !== mdpconfirm?.value && mdpconfirm?.dirty){
@@ -30,6 +42,7 @@
             <p class="pAlert">Maximum 20 caractères</p>
             }
 
+            <!-- Confirmer le mot de passe -->
             <label for="confirm-password">Confirmer le mot de passe :</label>
             <input type="password" id="confirm-password" formControlName="mdpConfirm">
             @if(newPwd?.value !== mdpconfirm?.value && mdpconfirm?.dirty){
@@ -45,7 +58,8 @@
             <p class="pAlert">Maximum 20 caractères</p>
             }   
 
-            <button type="submit" [disabled]=" newPwd?.value !== mdpconfirm?.value  ">Confirmer</button>
+            <!-- Boutons de confirmation et d'annulation -->
+            <button type="submit" [disabled]=" newPwd?.value !== mdpconfirm?.value || profilForm.invalid">Confirmer</button>
             <button type="button" id="cancel-btn" (click)="onReset()">Annuler</button>
         </form>
     </div>
