--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -1,49 +1,52 @@
 <nav class="navbar">
-    <div class="container-fluid custom-navbar">
-      <a class="navbar-brand" routerLink="/home">
-        <img src="logo.png" alt="Bootstrap" >
-      </a>
-  
-      <div class="d-flex flex-column">
-  
-        <div class="d-flex align-items-center login-container">
-          <a class="navbar-brand login-link" style="color: #1C593A;" (click)="onDisconnect()">Se Déonnecter
-          <i class="bi bi-person-x" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
-        </div>
-      </div>
-    </div>
-  </nav>
-  
-  <!---navbar2-->
-  <nav class="navbar navbar-expand-lg m-2 nav2 sticky">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" 
-              aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color: #fffffe;">
-        <span class="navbar-toggler-icon text-white"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <!-- Left Aligned Navbar Links -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
-          
-          <li class="nav-item">
-            <a class="nav-link" style="color: #fffffe;" routerLink="/ListePlantesAdmin" routerLinkActive="active">Catalogue des Plantes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: #fffffe;" routerLink="/addPlant" routerLinkActive="active">Ajouter une plante</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: #fffffe;" routerLink="/listeCommandes" routerLinkActive="active">Liste des commandes</a>
-          </li>
-          
-        </ul>
-      </div>
-      <button class="btn cart-button" routerLink="profilAdmin">
-        <i class="bi bi-person-lines-fill"></i> Profil <strong>{{admin.username}}</strong>
-      </button>
-    </div>
-  </nav>
+  <div class="container-fluid custom-navbar">
+    <a class="navbar-brand" routerLink="/home">
+      <img src="logo.png" alt="Bootstrap">
+    </a>
 
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+    <div class="d-flex flex-column">
+
+      <div class="d-flex align-items-center login-container">
+        <a class="navbar-brand login-link" style="color: #1C593A;" (click)="onDisconnect()">Se Déonnecter
+          <i class="bi bi-person-x" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<!---navbar2-->
+<nav class="navbar navbar-expand-lg m-2 nav2 sticky">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
+      aria-controls="navbarNavDropdown" [attr.aria-expanded]="!isNavbarCollapsed" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div id="navbarNavDropdown" class="collapse navbar-collapse" [ngClass]="{'show': !isNavbarCollapsed}">
+      <!-- Left Aligned Navbar Links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+
+        <li class="nav-item">
+          <a class="nav-link" style="color: #fffffe;" routerLink="/ListePlantesAdmin"
+            routerLinkActive="active">Catalogue des Plantes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color: #fffffe;" routerLink="/addPlant" routerLinkActive="active">Ajouter une
+            plante</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color: #fffffe;" routerLink="/listeCommandes" routerLinkActive="active">Liste des
+            commandes</a>
+        </li>
+
+      </ul>
+    </div>
+    <button class="btn cart-button" routerLink="profilAdmin">
+      <i class="bi bi-person-lines-fill"></i> Profil <strong>{{admin.username}}</strong>
+    </button>
+  </div>
+</nav>
+
+<router-outlet></router-outlet>
+<app-footer></app-footer>
