--- a/src/app/compnents/api/api.component.html
+++ b/src/app/compnents/api/api.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="api-content">
-    <h1 class="mb-3">Plantes en Cours d'Arrivée <i class="bi bi-hourglass-split"></i></h1>
+    <h1 class="mb-3">Plantes en Cours d'arrivage <i class="bi bi-hourglass-split"></i></h1>
     <p class="text-muted mb-4 text-center">
         Découvrez notre sélection de plantes qui arrivent bientôt. Soyez prêt à accueillir les nouvelles arrivées dans
         votre espace !
