--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -55,7 +55,7 @@
         <!------------ le lien pour aller à la page de new environnement --------------- -->
         <li class="nav-item">
           <a class="nav-link" style="color: #fffffe;" routerLink="/newEnvironnement" routerLinkActive="active">
-            Prochaines Arrivées
+            Prochains Arrivages
           </a>
         </li>
       </ul>
