--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -50,7 +50,7 @@
             </button>
         </form>
     </div>
-    <!-- Modal Bootstrap -->
+    <!-- Modal Bootstrap pour afficher le message d'erreur si le nom d'utilisateur ou le mot de passe est incorrect -->
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
