--- a/src/app/compnents/liste-commandes/liste-commandes.component.html
+++ b/src/app/compnents/liste-commandes/liste-commandes.component.html
@@ -6,6 +6,7 @@
     <!-- tableau des commandes -->
     <div class="table-responsive">
         <table class="table table-striped table-hover ">
+            <!-- thead -->
             <thead class="table-dark">
                 <tr>
                     <th scope="col">Nom</th>
@@ -17,10 +18,10 @@
                     <th scope="col">Options</th>
                 </tr>
             </thead>
+            <!-- tbody -->
             <tbody class="table-info">
                 @for(c of commandes;track $index){
                 <tr>
-
                     <td>{{c.nom}}</td>
                     <td>{{c.prenom}}</td>
                     <td>{{c.total | number:'1.2-2'}}$</td>
@@ -44,7 +45,7 @@
                     </td>
                 </tr>
 
-                <!-- Modal -->
+                <!-- Modal pour supprimer une commande  -->
                 <div class="modal fade" [id]="'exampleModal'+c.id" tabindex="-1" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog">
@@ -97,6 +98,6 @@
                 }
             </div>
         </div>
-        
+
     </div>
 </div>
