--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-lg m-2 nav2 sticky">
   <div class="container-fluid">
     <!-- ------------------------------ le bouton pour ouvrir le menu ------------------------------ -->
-    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
+    <button class="navbar-toggler p-2 m-2" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
       aria-controls="navbarNavDropdown" [attr.aria-expanded]="!isNavbarCollapsed" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
