--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -68,12 +68,12 @@
 <app-quiz></app-quiz>
 
 <!-- ------------------------------ la navigation par catégorie ------------------------------ -->
-<h2 class="text-center mt-5">Chercher par catégorie</h2>
+<h2 class="text-center mt-5">Nos catégories</h2>
 
 <div class="d-flex justify-content-center row row-cols-1 row-cols-md-4" style="width: 100%;">
     <!-- ------------------------------ les fleurs ------------------------------ -->
     <div class="col">
-        <a routerLink="/listePlantes">
+        <a>
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -83,7 +83,7 @@
     </div>
     <!-- ------------------------------ les cactus et succulentes ------------------------------ -->
     <div class="col">
-        <a routerLink="/listePlantes">
+        <a >
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -93,7 +93,7 @@
     </div>
     <!-- ------------------------------ les plantes purificatrices d'air ------------------------------ -->
     <div class="col">
-        <a routerLink="/listePlantes">
+        <a>
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
