--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -76,7 +76,7 @@
 <div id="plant-fleuries">
     <div class="pt-3 mb-1">
         <div class="section-title container">
-            <h4 class=" text-uppercase">Plantes fleuries</h4>
+            <h4 class=" text-uppercase" id="fleur">Plantes fleuries</h4>
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
@@ -93,7 +93,7 @@
 <div id="plant-cactus">
     <div class="pt-5 mb-3">
         <div class="section-title container">
-            <h4 class=" text-uppercase">Cactus et succulentes</h4>
+            <h4 class=" text-uppercase" id="cact">Cactus et succulentes</h4>
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
@@ -110,7 +110,7 @@
 <div id="plant-purificatrices">
     <div class="pt-5 mb-3">
         <div class="section-title container">
-            <h4 class=" text-uppercase">Plantes purificatrices d'air</h4>
+            <h4 class=" text-uppercase" id="pur">Plantes purificatrices d'air</h4>
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
