--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="container-fluid custom-navbar">
-    <a class="navbar-brand" routerLink="/home">
+    <a class="navbar-brand" routerLink="/ListePlantesAdmin">
       <img src="logo.png" alt="Bootstrap">
     </a>
 
